RESOLVED FIXED283416
[GTK][WPE] Increase adoption of std::array for GObject signals and properties
https://bugs.webkit.org/show_bug.cgi?id=283416
Summary [GTK][WPE] Increase adoption of std::array for GObject signals and properties
Claudio Saavedra
Reported 2024-11-20 07:04:40 PST
.
Attachments
Claudio Saavedra
Comment 1 2024-11-20 07:06:21 PST
EWS
Comment 2 2024-11-20 08:03:32 PST
Committed 286859@main (b701aea46e93): <https://commits.webkit.org/286859@main> Reviewed commits have been landed. Closing PR #36895 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.