Source/WebKit/UIProcess/API/glib/WebKitFindController.cpp
@@ -79,7 +79,7 @@ struct _WebKitFindControllerPrivate {
     WebKitWebView* webView;
 };
 
-static guint signals[LAST_SIGNAL] = { 0, };
+static std::array<unsigned, LAST_SIGNAL> signals;
 
 WEBKIT_DEFINE_FINAL_TYPE(WebKitFindController, webkit_find_controller, G_TYPE_OBJECT, GObject)
 
